--- a/example-react-app/src/App.css
+++ b/example-react-app/src/App.css
@@ -1,3 +1,11 @@
 .Header {
   text-align: center;
 }
+
+.App {
+  background-color: rgb(142, 147, 253);
+  width: 100%;
+  height: 100vh;
+  padding: 0;
+  margin: 0;
+}
