--- a/example-react-app/src/App.css
+++ b/example-react-app/src/App.css
@@ -1,19 +1,21 @@
 .Header {
   text-align: center;
 }
-
 h1 {
+  padding-top: 10px;
   margin-block-start: 0;
 }
-
 body {
   margin: 0;
 }
-
 .App {
-  background-color: rgb(142, 147, 253);
+  background-color: rgb(79, 84, 203);
   width: 100%;
   height: 100vh;
   padding: 0;
   margin: 0;
+}
+.playerBox{
+  margin: 10px 10px;
+  padding: 5px;
 }
