Modified some css so we can differentiate between player1 box and player2 box.

--- a/example-react-app/src/PlayerBox.css
+++ b/example-react-app/src/PlayerBox.css
@@ -1,5 +1,10 @@
-.playerBox {
+.player1 {
     background-color: rgb(7, 175, 17);
+    width: 50%;
+    height: 200px;
+}
+.player2 {
+    background-color: rgb(7, 75, 17);
     width: 50%;
     height: 200px;
 }
