--- a/example-react-app/src/PlayerBox.css
+++ b/example-react-app/src/PlayerBox.css
@@ -1,10 +1,7 @@
-.player1 {
-    background-color: rgb(7, 175, 17);
+.playerBox {
+    background-color: rgba(255,255,255,1);
     width: 50%;
     height: 200px;
-}
-.player2 {
-    background-color: rgb(7, 75, 17);
-    width: 50%;
-    height: 200px;
+    border: 3px solid black;
+    border-radius: 10px;
 }
