--- a/example-react-app/src/Style/Square.css
+++ b/example-react-app/src/Style/Square.css
@@ -1,6 +1,8 @@
 .square {
-    background: #fff;
     width: 50px;
     height: 50px;
     display: inline;
+    background: url("../Assets/dog-png-images-download-10180-png-resources-with-transparent-dogpng-360_360.png");
+    position: relative;
+    background-size: 50px;
 }
