Fixing CSS for background image of Squares

--- a/example-react-app/src/Style/Square.css
+++ b/example-react-app/src/Style/Square.css
@@ -1,11 +1,14 @@
 .square {
     width: 50px;
     height: 50px;
-    display: inline;
-    background: url("../Assets/dog-png-images-download-10180-png-resources-with-transparent-dogpng-360_360.png");
-    position: relative;
-    background-size: 50px;
-
-    font-size: 14pt;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    color: black;
     font-weight: bold;
+    font-size: 14pt;
+}
+.piece {
+    height: 100%;
+    background: transparent;
 }
