--- a/chess-game/src/Style/Square.css
+++ b/chess-game/src/Style/Square.css
@@ -10,5 +10,7 @@
 }
 .piece {
     height: 100%;
-    background: transparent;
+    background: rgba(0,0,0,0);
+    color: rgba(0,0,0,0);
+    display: none;
 }
