--- a/chess-game/src/Style/App.css
+++ b/chess-game/src/Style/App.css
@@ -1,5 +1,7 @@
 .Header {
   text-align: center;
+  text-shadow: -3px -1px darkgrey;
+  text-decoration: underline black;
 }
 h1 {
   padding-top: 10px;
@@ -12,7 +14,7 @@ body {
   background-color: rgb(79, 84, 203);
   width: 100%;
   height: 100vh;
-  padding: 0;
+  padding: 10px 20px 50px 20px;
   margin: 0;
 }
 .playerBox{
