--- a/chess-game/src/Style/PlayerBox.css
+++ b/chess-game/src/Style/PlayerBox.css
@@ -2,8 +2,7 @@
     background-color: rgba(255,255,255,1);
     width: 33%;
     height: 200px;
-    border: 3px solid;
-    border-color: yellow;
+    border: 3px solid yellow;
     border-radius: 10px;
 }
 
@@ -12,7 +11,7 @@
     color: rgba(75,75,75,1);
     width: 33%;
     height: 200px;
-    border: 3px solid;
-    border-color: black;
+    border: 3px solid black;
     border-radius: 10px;
+
 }
