--- a/chess-game/src/Style/Square.css
+++ b/chess-game/src/Style/Square.css
@@ -4,10 +4,24 @@
     display: inline-block;
     padding: 0;
     margin: 0;
+    background-color: white;
     color: black;
     font-weight: bold;
     font-size: 14pt;
 }
+
+.square2 {
+    width: 50px;
+    height: 50px;
+    display: inline-block;
+    padding: 0;
+    margin: 0;
+    background-color: black;
+    color: white;
+    font-weight: bold;
+    font-size: 14pt;
+}
+
 .piece {
     height: 100%;
     background: transparent;
