--- a/chess-game/src/Style/PlayerBox.css
+++ b/chess-game/src/Style/PlayerBox.css
@@ -1,17 +1,16 @@
 .turn {
     background-color: rgba(255,255,255,1);
-    width: 33%;
-    height: 200px;
+    height: 47.5%;
     border: 3px solid yellow;
     border-radius: 10px;
+    padding: 10px;
 }
 
 .notTurn {
     background-color: rgba(175,175,175,1);
     color: rgba(75,75,75,1);
-    width: 33%;
-    height: 200px;
+    height: 47.5%;
     border: 3px solid black;
     border-radius: 10px;
-
+    padding: 10px;
 }
