Finally fixed CSS image transparency problem.

--- a/chess-game/src/Style/App.css
+++ b/chess-game/src/Style/App.css
@@ -24,30 +24,30 @@ body {
 /*
 Square color styling (Color#1)
 */
-.board:nth-child(even) .row:nth-child(even) button:nth-child(even) {
+.board:nth-child(even) .row:nth-child(even) div:nth-child(even) {
   background-color: lightblue;
 }
-.board:nth-child(odd) .row:nth-child(odd) button:nth-child(odd) {
+.board:nth-child(odd) .row:nth-child(odd) div:nth-child(odd) {
   background-color: lightblue;
 }
-.board:nth-child(odd) .row:nth-child(even) button:nth-child(even) {
+.board:nth-child(odd) .row:nth-child(even) div:nth-child(even) {
   background-color: lightblue;
 }
-.board:nth-child(even) .row:nth-child(odd) button:nth-child(odd) {
+.board:nth-child(even) .row:nth-child(odd) div:nth-child(odd) {
     background-color: lightblue;
 }
 /*
 Square color styling (Color#2)
 */
-.board:nth-child(odd) .row:nth-child(even) button:nth-child(odd) {
+.board:nth-child(odd) .row:nth-child(even) div:nth-child(odd) {
   background-color: white;
 }
-.board:nth-child(even) .row:nth-child(odd) button:nth-child(even) {
+.board:nth-child(even) .row:nth-child(odd) div:nth-child(even) {
   background-color: white;
 }
-.board:nth-child(even) .row:nth-child(even) button:nth-child(odd) {
+.board:nth-child(even) .row:nth-child(even) div:nth-child(odd) {
     background-color: white;
 }
-.board:nth-child(odd) .row:nth-child(odd) button:nth-child(even) {
+.board:nth-child(odd) .row:nth-child(odd) div:nth-child(even) {
     background-color: white;
 }
