--- a/chess-game/src/Style/Square.css
+++ b/chess-game/src/Style/Square.css
@@ -7,11 +7,7 @@
     font-weight: bold;
     font-size: 14pt;
     border: 0;
-}
-
-.piece {
-    height: 100%;
-    background: rgba(0,0,0,0);
-    color: rgba(0,0,0,0);
-    display: none;
+    background-image: url(../Assets/test.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
 }
