Made it so the image used on the squares on the board can be dynamically assigned through a the piece prop for square.

--- a/chess-game/src/Style/Square.css
+++ b/chess-game/src/Style/Square.css
@@ -7,7 +7,7 @@
     font-weight: bold;
     font-size: 14pt;
     border: 0;
-    background-image: url(../Assets/test.png);
+    /* background-image: url(../Assets/test.png); */
     background-repeat: no-repeat;
     background-size: 100%;
 }
