--- a/chess-game/src/Style/App.css
+++ b/chess-game/src/Style/App.css
@@ -6,7 +6,12 @@
 h1 {
   padding-top: 10px;
   margin-block-start: 0;
-  font-size: 24px;
+  font-size: 40px;
+}
+h2 {
+  padding-top: 10px;
+  margin-block-start: 0;
+  font-size: 25px;
 }
 body {
   margin: 0;
