--- a/chess-game/src/Style/App.css
+++ b/chess-game/src/Style/App.css
@@ -1,7 +1,9 @@
 .Header {
   text-align: center;
-  text-shadow: -3px -1px darkgrey;
-  text-decoration: underline black;
+  text-shadow: -2px -2px #a7384b;
+
+  color: red;
+  font-size: 30px;
 }
 h1 {
   padding-top: 10px;
@@ -17,7 +19,7 @@ body {
   margin: 0;
 }
 .App {
-  background-color: rgb(79, 84, 203);
+  background-color: rgb(55, 57, 57);
   width: 100%;
   padding: 10px 20px 50px 20px;
   margin: 0;
