--- a/chess-game/src/Style/PlayerBox.css
+++ b/chess-game/src/Style/PlayerBox.css
@@ -1,16 +1,16 @@
 .turn {
     background-color: rgba(255,255,255,1);
     height: 47.5%;
-    border: 3px solid yellow;
+    border: 6px solid #db8800;
     border-radius: 10px;
     padding: 10px;
 }
 
 .notTurn {
     background-color: rgba(175,175,175,1);
-    color: rgba(75,75,75,1);
+    color: rgb(48, 48, 48);
     height: 47.5%;
-    border: 3px solid black;
+    border: 6px solid #2c2c2c;
     border-radius: 10px;
     padding: 10px;
 }
