--- a/chess-game/src/Style/EndTurnBtn.css
+++ b/chess-game/src/Style/EndTurnBtn.css
@@ -1,3 +1,5 @@
+/* this whole file can probably be removed
+
 .btn {
     Background-color: red;
     color: black;
@@ -6,3 +8,5 @@
     padding: 15px;
     margin-left: 15px;
 }
+
+*/
