--- a/chess-game/src/Style/PlayerBox.css
+++ b/chess-game/src/Style/PlayerBox.css
@@ -1,7 +1,17 @@
 .turn {
     background-color: rgba(255,255,255,1);
     height: 47.5%;
-    border: 6px solid #dd8900;
+    border: 6px solid #ec9300;
+    border-radius: 10px;
+    padding: 10px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.turnCheck {
+    background-color: rgb(214, 48, 58);
+    height: 47.5%;
+    border: 6px solid #ec9300;
     border-radius: 10px;
     padding: 10px;
     display: flex;
