Adjusted playerbox CSS for checkmate

--- a/chess-game/src/Style/PlayerBox.css
+++ b/chess-game/src/Style/PlayerBox.css
@@ -32,7 +32,7 @@
 .checkmate {
     background-color: rgb(255, 0, 29);
     height: 47.5%;
-    border: 6px solid #ffa100;
+    border: 6px solid #000000;
     border-radius: 10px;
     padding: 10px;
     display: flex;
