--- a/chess-game/src/Style/PlayerBox.css
+++ b/chess-game/src/Style/PlayerBox.css
@@ -4,8 +4,8 @@
     border: 6px solid #ec9300;
     border-radius: 10px;
     padding: 10px;
-    display: flex;
-    justify-content: space-between;
+    /*display: flex;*/
+    /*justify-content: space-between;*/
 }
 
 .notTurn {
@@ -15,8 +15,8 @@
     border: 6px solid #2c2c2c;
     border-radius: 10px;
     padding: 10px;
-    display: flex;
-    justify-content: space-between;
+    /*display: flex;*/
+    /*justify-content: space-between;*/
 }
 
 .turnCheck {
@@ -25,8 +25,8 @@
     border: 6px solid #ffa100;
     border-radius: 10px;
     padding: 10px;
-    display: flex;
-    justify-content: space-between;
+    /*display: flex;*/
+    /*justify-content: space-between;*/
 }
 
 .checkmate {
@@ -35,8 +35,8 @@
     border: 6px solid #000000;
     border-radius: 10px;
     padding: 10px;
-    display: flex;
-    justify-content: space-between;
+    /*display: flex;*/
+    /*justify-content: space-between;*/
 }
 
 .ffButton {
@@ -53,4 +53,14 @@
     background-color: red;
     border-color: red;
     color: white;
+}
+.dungeonImage {
+    width: 50px;
+    height: 50px;
+}
+.pBoxContainer {
+    width: 100%;
+}
+.pBoxHeader {
+    width: 100%;
 }
