--- a/chess-game/src/Style/PlayerBox.css
+++ b/chess-game/src/Style/PlayerBox.css
@@ -4,8 +4,6 @@
     border: 6px solid #ec9300;
     border-radius: 10px;
     padding: 10px;
-    /*display: flex;*/
-    /*justify-content: space-between;*/
 }
 
 .notTurn {
@@ -15,8 +13,6 @@
     border: 6px solid #2c2c2c;
     border-radius: 10px;
     padding: 10px;
-    /*display: flex;*/
-    /*justify-content: space-between;*/
 }
 
 .turnCheck {
@@ -25,8 +21,6 @@
     border: 6px solid #ffa100;
     border-radius: 10px;
     padding: 10px;
-    /*display: flex;*/
-    /*justify-content: space-between;*/
 }
 
 .checkmate {
@@ -35,32 +29,31 @@
     border: 6px solid #000000;
     border-radius: 10px;
     padding: 10px;
-    /*display: flex;*/
-    /*justify-content: space-between;*/
 }
 
 .ffButton {
-    height: 50px;
     border-radius: 10px;
     background-color: white;
     border-color: red;
     transition-duration: 0.5s;
+    width: 100%;
+    padding: 15px 0;
+    margin: 10px 0;
 }
 
 .ffButton:hover {
-    height: 50px;
     border-radius: 10px;
     background-color: red;
     border-color: red;
     color: white;
 }
 .dungeonImage {
-    width: 50px;
-    height: 50px;
+    width: 12.5%;
+    max-width: 75px;
 }
-.pBoxContainer {
-    width: 100%;
+hr {
+    border-top: 1px solid #000;
 }
-.pBoxHeader {
-    width: 100%;
+.height-adjust {
+    height: 45%;
 }
