--- a/chess-game/src/Style/PlayerBox.css
+++ b/chess-game/src/Style/PlayerBox.css
@@ -23,8 +23,16 @@
     padding: 10px;
 }
 
-.checkmate {
+.checkMate {
     background-color: rgb(255, 0, 29);
+    height: 47.5%;
+    border: 6px solid #000000;
+    border-radius: 10px;
+    padding: 10px;
+}
+
+.staleMate {
+    background-color: rgb(255, 211, 0);
     height: 47.5%;
     border: 6px solid #000000;
     border-radius: 10px;
