--- a/chess-game/src/Style/EndGame.css
+++ b/chess-game/src/Style/EndGame.css
@@ -1,9 +1,20 @@
-.endGameScreen {
+.endGameScreenWhiteWins {
     position: absolute;
-    top: 30%;
+    top: 60%;
     left: 5%;
     background-color: rgba(255,255,255,1);
-    height: 37.5%;
+    width: 400px;
+    border: 6px solid rgb(0, 0, 0);
+    border-radius: 10px;
+    text-align: center;
+    padding: 25px;
+}
+
+.endGameScreenBlackWins {
+    position: absolute;
+    top: 20%;
+    left: 4%;
+    background-color: rgba(255,255,255,1);
     width: 400px;
     border: 6px solid rgb(0, 0, 0);
     border-radius: 10px;
@@ -12,7 +23,7 @@
 }
 
 .endGameScreen .resetButton {
-    width: 75%;
+    width: 80%;
     font-size: 24px;
     height: 50px;
     margin-top: 20px;
