--- a/chess-game/src/Style/PlayerBox.css
+++ b/chess-game/src/Style/PlayerBox.css
@@ -48,12 +48,20 @@
     padding: 15px 0;
 }
 
-.ffButton:hover {
+.ffButton:hover:enabled {
     border-radius: 10px;
     background-color: red;
     border-color: red;
     color: white;
 }
+
+.ffButton[disabled] {
+    border-radius: 10px;
+    background-color: #555555;
+    border-color: #2C2C2C;
+    color: #2C2C2C;
+}
+
 .dungeonImage {
     width: 12.5%;
     max-width: 75px;
